--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
     <link rel="stylesheet" type="text/css" href="style.css" />
-    <title>Chen Gong (宫辰)</title>
+    <title>Guangwei Gao (高广谓)</title>
     <base href="https://gcatnjust.github.io/ChenGong/">
 </head>
 
