--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
     <link rel="stylesheet" type="text/css" href="style.css" />
     <title>Guangwei Gao (高广谓)</title>
-    <base href="https://gcatnjust.github.io/ChenGong/">
+    <base href="https://tanglei-sys.github.io/">
 </head>
 
 <body>
