--- a/education.html
+++ b/education.html
@@ -3,12 +3,12 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
     <link rel="stylesheet" type="text/css" href="style.css" />
-    <title>Chen Gong</title>
-    <base href="https://gcatnjust.github.io/ChenGong/research.html">
+    <title>Guangwei Gao</title>
+    <base href="https://tanglei-sys.github.io/research.html">
 </head>
 
 <body>
-<h1 style="padding-left: 0.5em">Prof. Chen Gong (宫辰)</h1><hr>
+<h1 style="padding-left: 0.5em">Guangwei Gao (高广谓)</h1><hr>
 <table summary="Table for page layout." id="tlayout">
 <tr valign="top">
 <td id="layout-menu">
@@ -35,7 +35,7 @@
 
 
 <ul>
-<li><p>09/2007-06/2010: East China University of Science and Technology (ECUST), B.E.  </p></li>
+<li><p>09, 2009-06, 2014, School of Computer Science and Engineering, Nanjing University of Science and Technology, Ph.D. in Pattern Recognition and Intelligence Systems, supervised by Prof. Jian Yang.  </p></li>
 <li><p>09/2010-05/2016: Shanghai Jiao Tong University (SJTU), Ph.D.</p></li>
 <li><p>07/2014-06/2017: University of Technology, Sydney (UTS), Ph.D.</p></li>
 
