--- a/education.html
+++ b/education.html
@@ -36,15 +36,13 @@
 
 <ul>
 <li><p>09, 2009-06, 2014, School of Computer Science and Engineering, Nanjing University of Science and Technology, Ph.D. in Pattern Recognition and Intelligence Systems, supervised by Prof. Jian Yang.  </p></li>
-<li><p>09/2010-05/2016: Shanghai Jiao Tong University (SJTU), Ph.D.</p></li>
-<li><p>07/2014-06/2017: University of Technology, Sydney (UTS), Ph.D.</p></li>
+<li><p>03, 2011-09, 2011, 02, 2013-08, 2013, Exchange Student, Depatment of Computing, The Hong Kong Polytechnic University, supervised by Prof. Lei Zhang.</p></li>
+<li><p>09, 2005-07, 2009，School of Math and Computer Science and Engineering, Nanjing Normal University, 
+B.S. in Information and Computation Science
+</p></li>
 
 </ul>
-<ul>
-<li><p>2007.09-2010.06: 华东理工大学，工学学士；  </p></li>
-<li><p>2010.09-2016.05: 上海交通大学, 工学博士；</p></li>
-<li><p>2014.07-2017.06: 悉尼科技大学, 工学博士.</p></li>
-</ul>
+
 </div>
 
 </td>
