--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 <table summary="Table for page layout." id="tlayout">
 <tr valign="top">
-<h1 style="padding-left: 0.5em">Prof. Chen Gong (宫辰)</h1><hr>
+<h1 style="padding-left: 0.5em">Guangwei Gao (高广谓)</h1><hr>
 <td id="layout-menu">
     <div class="menu-item"><a href="index.html" class="current">Home (首页)</a></div>
 	<!-- <div class="menu-item"><a href="news.html">News</a></div> -->
@@ -39,12 +39,11 @@
     <table class="imgtable"><tr valign="top">
         <td><img src="myphoto.jpg" alt="MyPhoto" /></td>
         <td align="left">
-            <p><span style="font-size: 110%"><b>Chen Gong</b></span></p>
+            <p><span style="font-size: 110%"><b>Guangwei Gao</b></span></p>
             <p>
                 Professor, PhD Supervisor (教授、博导) <br>
-				School of Computer Science and Technology<br>
-				Nanjing University of Science and Technology<br>
-				南京理工大学计算机科学与工程学院<br>
+				Institute of Advanced Technology<br>
+				Nanjing University of posts and Telecommunications<br>
 				<!--Postdoc Fellow (with <a href="http://www.ms.k.u-tokyo.ac.jp/sugi/" target="_blank">Masashi Sugiyama</a>)<br>
                 <a href="https://aip.riken.jp/labs/generic_tech/imperfect_inf_learn/" target="_blank">Imperfect Information Learning Team</a><br>
                 <a href="http://www.riken.jp/en/" target="_blank">RIKEN</a>
@@ -57,17 +56,15 @@
             </p> -->
 
             <p>
-                Address: Room 4030, Dingxin Building, Nanjing University of Science and Technology <br> 
-				No. 200, Xiaolingwei Street, Xuanwu, Nanjing, Jiangsu, China, 210094<br>
-				通讯地址：中国江苏省南京市玄武区孝陵卫街200号南京理工大学鼎新楼4030室<br>
-				邮编：210094                
+
+				#9, Wen Yuan Lu, Xianlin, Nanjing, China, 210046<br>
+             
             </p>
 			
             <p>
-                E-mail: chen.gong@njust.edu.cn<br>
-                <a href="https://scholar.google.com.hk/citations?user=guttoBwAAAAJ&hl=zh-CN" target="_blank">[Google Scholar (谷歌学术)]</a>
-                <a href="http://202.119.85.163/open/TutorInfo.aspx?dsbh=3XCKde28ejRVYPAsrGYvhw==&yxsh=4iVdgPyuKTE=&zydm=fY2NaWnaNpk=" target="_blank">[University Website (学校主页)]</a>
-				<a href="https://dblp.org/pers/hd/g/Gong_0002:Chen" target="_blank">[dblp]</a>
+                E-mail: csgwgao@njupt.edu.cn or csggao@gmail.com<br>
+                <a href="https://sites.google.com/view/guangweigao">[Google Web]</a>
+
 				<br>
                
             </p>			 
