--- a/index.html
+++ b/index.html
@@ -70,8 +70,7 @@
 	<div>
         <h2><hr><a name="openning_positions"></a><p style="color:red;">Research topics</p></h2>
         <ul>
-           1. Biometrics (Heterogeneous face recognition, etc), Image processing (Face hallucination, etc), Analysis and processing of multi-media data
-		   
+           Biometrics (Heterogeneous face recognition, etc), Image processing (Face hallucination, etc), Analysis and processing of multi-media data <br>  
         </ul>	
 		 
     </div>
