--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     </tr></table>
 	
 	<div>
-        <h2><hr><a name="openning_positions"></a><p style="color:red;">Research topics</p></h2>
+        <h2><hr><a name="Research topics"></a><p >Research topics</p></h2>
         <ul>
            Biometrics (Heterogeneous face recognition, etc), Image processing (Face hallucination, etc), Analysis and processing of multi-media data <br>  
         </ul>	
@@ -77,7 +77,7 @@
 	
 	
 	<div>
-        <h2><hr><a name="biography"></a>Work Experience</h2>
+        <h2><hr><a name="Work Experience"></a>Work Experience</h2>
         <ul>
         04, 2019-present, Project Researcher, National Institute of Informatics, Tokyo, Japan.<br>
 	07, 2017-present, Associate Professor, Institute of Advanced Technology, 
