--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     </tr></table>
 	
 	<div>
-        <h2><hr><a name="Research topics"></a><p >Research topics</p></h2>
+        <h2><hr><a name="Research topics"></a>Research topics</h2>
         <ul>
            Biometrics (Heterogeneous face recognition, etc), Image processing (Face hallucination, etc), Analysis and processing of multi-media data <br>  
         </ul>	
