--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
 <td id="layout-menu">
     <div class="menu-item"><a href="index.html" class="current">Home (首页)</a></div>
 	<!-- <div class="menu-item"><a href="news.html">News</a></div> -->
-    <div class="menu-item"><a href="education.html">Education (教育背景)</a></div>
+    <div class="menu-item"><a href="education.html">Education Background</a></div>
 	<!-- <div class="menu-item"><a href="contact.html">Contact (联系方式)</a></div> -->
 	<div class="menu-item"><a href="publications.html">Publications (学术论文)</a></div>
 	<div class="menu-item"><a href="patents.html">Patents (专利)</a></div>
-	<div class="menu-item"><a href="service.html">Services (学术服务)</a></div>
+	<div class="menu-item"><a href="service.html">Academic Service</a></div>
 	<div class="menu-item"><a href="codes.html">Codes (代码)</a></div>
     <div class="menu-item"><a href="teaching.html">Teaching (教学)</a></div>
 	<div class="menu-item"><a href="awards.html">Awards (获奖情况)</a></div>
