--- a/index.html
+++ b/index.html
@@ -12,16 +12,16 @@
 <tr valign="top">
 <h1 style="padding-left: 0.5em">Guangwei Gao (高广谓)</h1><hr>
 <td id="layout-menu">
-    <div class="menu-item"><a href="index.html" class="current">Home (首页)</a></div>
+    <div class="menu-item"><a href="index.html" class="current">Home </a></div>
 	<!-- <div class="menu-item"><a href="news.html">News</a></div> -->
     <div class="menu-item"><a href="education.html">Education Background</a></div>
 	<!-- <div class="menu-item"><a href="contact.html">Contact (联系方式)</a></div> -->
-	<div class="menu-item"><a href="publications.html">Publications (学术论文)</a></div>
-	<div class="menu-item"><a href="patents.html">Patents (专利)</a></div>
+	<div class="menu-item"><a href="publications.html">Publications</a></div>
+	<div class="menu-item"><a href="patents.html">Patents </a></div>
 	<div class="menu-item"><a href="service.html">Academic Service</a></div>
-	<div class="menu-item"><a href="codes.html">Codes (代码)</a></div>
-    <div class="menu-item"><a href="teaching.html">Teaching (教学)</a></div>
-	<div class="menu-item"><a href="awards.html">Awards (获奖情况)</a></div>
+	<div class="menu-item"><a href="codes.html">Codes </a></div>
+    <div class="menu-item"><a href="teaching.html">Teaching </a></div>
+	<div class="menu-item"><a href="awards.html">Awards </a></div>
     <div class="menu-item"><a href="talks.html">Talks (报告与讲座)</a></div>
 	<div class="menu-item"><a href="members.html">Group Members (课题组成员)</a></div>
 	<div class="menu-item"><a href="recruitement.html">Call for Students (招生信息)</a></div>
