--- a/service.html
+++ b/service.html
@@ -31,7 +31,7 @@
 <td id="layout-content">
 
 <div>
-        <h2><hr><a name="profact"></a>Professional Service</h2>
+        <h2><hr><a name="profact"></a>Academic Service</h2>
 <!--         <h3>Special Area Chair &amp; Meta-reviewer</h3>
         <style>
             ul.ac {list-style: none;}
@@ -45,8 +45,9 @@
             <li value="2019"><p> AAAI Conference on Artificial Intelligence (AAAI) </p></li>
         </ul> -->
 		
-			<h3>Journal Reviewer :</h3>
+	
         <ul>
+	    <li><p>Reviewer for </p></li>
             <li><p>IEEE Transactions on Image Processing </p></li>	
             <li><p>IEEE Transactions on Information Forensics and Security</p></li>			
 			<li><p>IEEE Transactions on Pattern Analysis and Machine Intelligence</p></li>
@@ -59,18 +60,8 @@
         </ul>
 	
 		
-		<h3>Journal Reviewer:</h3>
-        <ul>
-             <li><p>IEEE Transactions on Image Processing </p></li>	
-            <li><p>IEEE Transactions on Information Forensics and Security</p></li>			
-			<li><p>IEEE Transactions on Pattern Analysis and Machine Intelligence</p></li>
-			<li><p>IEEE Transactions on Circuits and Systems for Video Technology</p></li>
-			<li><p>IEEE Transactions on Multimedia</p></li>
-			<li><p>IEEE Transactions on Cybernetics</p></li>
-			<li><p>Pattern Recognition</p></li>
-			<li><p>Neurocomputing</p></li>
-			<li><p>Pattern Recognition Letters</p></li>
-        </ul>
+		
+
 			
 
 
