--- a/education.html
+++ b/education.html
@@ -31,7 +31,7 @@
 <td id="layout-content">
 
 <div>
-        <h2><hr><a name="education"></a>Education (教育背景)</h2>
+        <h2><hr><a name="education"></a>Education</h2>
 
 
 <ul>
