--- a/service.html
+++ b/service.html
@@ -3,7 +3,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
     <link rel="stylesheet" type="text/css" href="style.css" />
-    <title>Chen Gong</title>
+    <title>Guangwei Gao</title>
     <base href="https://tanglei-sys.github.io/research.html">
 </head>
 
@@ -47,7 +47,8 @@
 		
 	
         <ul>
-	    <p>Reviewer for </p><br>
+		
+	    <font size="2"> Reviewer for</font><br/>
             <li><p>IEEE Transactions on Image Processing </p></li>	
             <li><p>IEEE Transactions on Information Forensics and Security</p></li>			
 			<li><p>IEEE Transactions on Pattern Analysis and Machine Intelligence</p></li>
