--- a/service.html
+++ b/service.html
@@ -47,8 +47,7 @@
 		
 	
         <ul>
-		
-	    <font size="2"> Reviewer for</font><br/>
+	    <b style="padding-left: 0.5em">Reviewer for</b>
             <li><p>IEEE Transactions on Image Processing </p></li>	
             <li><p>IEEE Transactions on Information Forensics and Security</p></li>			
 			<li><p>IEEE Transactions on Pattern Analysis and Machine Intelligence</p></li>
