--- a/service.html
+++ b/service.html
@@ -47,7 +47,7 @@
 		
 	
         <ul>
-	    <b style="padding-left: 0.5em">Reviewer for</b>
+	    <a style="padding-left: 0.5em">Reviewer for</a>
             <li><p>IEEE Transactions on Image Processing </p></li>	
             <li><p>IEEE Transactions on Information Forensics and Security</p></li>			
 			<li><p>IEEE Transactions on Pattern Analysis and Machine Intelligence</p></li>
