--- a/service.html
+++ b/service.html
@@ -47,7 +47,7 @@
 		
 	
         <ul>
-	    <b>Reviewer for</b>
+	    <h3>Reviewer for</h3>
             <li><p>IEEE Transactions on Image Processing </p></li>	
             <li><p>IEEE Transactions on Information Forensics and Security</p></li>			
 			<li><p>IEEE Transactions on Pattern Analysis and Machine Intelligence</p></li>
