--- a/publications.html
+++ b/publications.html
@@ -3,23 +3,23 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
     <link rel="stylesheet" type="text/css" href="style.css" />
-    <title>Chen Gong</title>
-    <base href="https://gcatnjust.github.io/ChenGong/publications.html">
+    <title>Guangwei Gao</title>
+    <base href="https://tanglei-sys.github.io/publications.html">
 </head>
 
 <body>
-<h1 style="padding-left: 0.5em">Prof. Chen Gong (宫辰)</h1><hr>
+<h1 style="padding-left: 0.5em">Prof. Guangwei Gao (高广谓)</h1><hr>
 <table summary="Table for page layout." id="tlayout">
 <tr valign="top">
 <td id="layout-menu">
     <div class="menu-item"><a href="index.html" class="current">Home (首页)</a></div>
 	<!-- <div class="menu-item"><a href="news.html">News</a></div> -->
-    <div class="menu-item"><a href="education.html">Education (教育背景)</a></div>
+    <div class="menu-item"><a href="education.html">Education Background</a></div>
 	<!-- <div class="menu-item"><a href="contact.html">Contact (联系方式)</a></div> -->
-	<div class="menu-item"><a href="publications.html">Publications (学术论文)</a></div>
-	<div class="menu-item"><a href="patents.html">Patents (专利)</a></div>
-	<div class="menu-item"><a href="service.html">Services (学术服务)</a></div>
-	<div class="menu-item"><a href="codes.html">Codes (代码)</a></div>
+	<div class="menu-item"><a href="publications.html">Publications</a></div>
+	<div class="menu-item"><a href="patents.html">Patents</a></div>
+	<div class="menu-item"><a href="service.html">Academic Services</a></div>
+	<div class="menu-item"><a href="codes.html">Codes</a></div>
 	    <div class="menu-item"><a href="teaching.html">Teaching (教学)</a></div>
     <div class="menu-item"><a href="awards.html">Awards (获奖情况)</a></div>
     <div class="menu-item"><a href="talks.html">Talks (报告与讲座)</a></div>
@@ -30,127 +30,18 @@
 </td>
 <td id="layout-content">
 
-    <h1 style="margin-top: 0em">Publications (学术论文)</h1><br>
-    
-<ul>
-<li><p>Note that the copyrights of the listed papers belong to the corresponding publishers, so you are not allowed to distribute them without permission. These papers can only be used for research purpose. (本网页所列文章的版权归出版商所有，未经许可不得传播；所有文章仅供研究使用。)</p></li>
-<li><p>IEEE/ACM Transactions系列文章为相关领域的世界顶级期刊，AAAI、IJCAI为人工智能领域国际顶级会议，CVPR、ICCV、ECCV为计算机视觉领域国际顶级会议，ICML、NeurIPS为机器学习领域国际顶级会议，KDD、ICDM为数据挖掘领域国际顶级会议。 </p></li>
-</ul>
-	
-	
-	<p>[ <a href="#2020">2020</a>,
-         <a href="#2019">2019</a>,
-         <a href="#2018">2018</a>,
-         <a href="#2017">2017</a>, 
-		 <a href="#2016">2016</a>,
-		 <a href="#2015">2015</a>, 
-		 <a href="#2014">2014</a>, 
-		 <a href="#2013">2013</a>, 
-		 <a href="#2012">2012</a> ]</p>
+    <h1 style="margin-top: 0em">Academic Publications</h1><br>
     
 
-<!--     <div>
-        <h2><hr>Preprints</h2>
-        <ul>
-            <li><p>
-                T. Fang*, N. Lu*, G. Niu, and M. Sugiyama.<br>
-                Rethinking importance weighting for deep learning under distribution shift.<br>
-                [ <a href="http://arxiv.org/abs/2006.04662" target="_blank">arXiv</a> ]
-            </p></li>
-            <li><p>
-                S. Wu, X. Xia, T. Liu, B. Han, M. Gong, N. Wang, H. Liu, and G. Niu.<br>
-                Class2Simi: A new perspective on learning with label noise.<br>
-                [ <a href="http://arxiv.org/abs/2006.07831" target="_blank">arXiv</a> ]
-            </p></li>
-            <li><p>
-                X. Xia, T. Liu, B. Han, N. Wang, M. Gong, H. Liu, G. Niu, D. Tao, and M. Sugiyama.<br>
-                Parts-dependent label noise: Towards instance-dependent label noise.<br>
-                [ <a href="http://arxiv.org/abs/2006.07836" target="_blank">arXiv</a> ]
-            </p></li>
-            <li><p>
-                Y. Yao, T. Liu, B. Han, M. Gong, J. Deng, G. Niu, and M. Sugiyama.<br>
-                Dual T: Reducing estimation error for transition matrix in label-noise learning.<br>
-                [ <a href="http://arxiv.org/abs/2006.07805" target="_blank">arXiv</a> ]
-            </p></li>
-            <li><p>
-                S. Wu*, X. Xia*, T. Liu, B. Han, M. Gong, N. Wang, H. Liu, and G. Niu.<br>
-                Multi-class classification from noisy-similarity-labeled data.<br>
-                [ <a href="http://arxiv.org/abs/2002.06508" target="_blank">arXiv</a> ]
-            </p></li>
-            <li><p>
-                Y. Yao, T. Liu, B. Han, M. Gong, G. Niu, M. Sugiyama, and D. Tao.<br>
-                Towards mixture proportion estimation without irreducibility.<br>
-                [ <a href="http://arxiv.org/abs/2002.03673" target="_blank">arXiv</a> ]
-            </p></li>
-            <li><p>
-                A. Berthon, B. Han, G. Niu, T. Liu, and M. Sugiyama.<br>
-                Confidence scores make instance-dependent label-noise learning possible.<br>
-                [ <a href="https://arxiv.org/abs/2001.03772" target="_blank">arXiv</a> ]
-            </p></li>
-            <li><p>
-                J. Zhang*, B. Han*, G. Niu, T. Liu, and M. Sugiyama.<br>
-                Where is the bottleneck of adversarial learning with unlabeled data?<br>
-                [ <a href="http://arxiv.org/abs/1911.08696" target="_blank">arXiv</a> ]
-            </p></li>
-            <li><p>
-                A. Jacovi, G. Niu, Y. Goldberg, and M. Sugiyama.<br>
-                Scalable evaluation and improvement of document set expansion via neural positive-unlabeled learning.<br>
-                [ <a href="http://arxiv.org/abs/1910.13339" target="_blank">arXiv</a> ]
-            </p></li>
-            <li><p>
-                W. Xu, G. Niu, A. Hyvärinen, and M. Sugiyama.<br>
-                Direction matters: On influence-preserving graph summarization and max-cut principle for directed graphs.<br>
-                [ <a href="http://arxiv.org/abs/1907.09588" target="_blank">arXiv</a> ]
-            </p></li>
-            <li><p>
-                Y. Pan, W. Chen, G. Niu, I. W. Tsang, and M. Sugiyama.<br>
-                Fast and robust rank aggregation against model misspecification.<br>
-                [ <a href="http://arxiv.org/abs/1905.12341" target="_blank">arXiv</a> ]
-            </p></li>
-            <li><p>
-                F. Liu, J. Lu, B. Han, G. Niu, G. Zhang, and M. Sugiyama.<br>
-                Butterfly: A panacea for all difficulties in wildly unsupervised domain adaptation.<br>
-                [ <a href="http://arxiv.org/abs/1905.07720" target="_blank">arXiv</a> ]
-            </p></li>
-            <li><p>
-                C.-Y. Hsieh, M. Xu, G. Niu, H.-T. Lin, and M. Sugiyama.<br>
-                A pseudo-label method for coarse-to-fine multi-label learning with limited supervision.<br>
-                [ <a href="https://openreview.net/forum?id=rylVYjqHdN" target="_blank">OpenReview</a> ]
-            </p></li>
-            <li><p>
-                M. Xu, B. Li, G. Niu, B. Han, and M. Sugiyama.<br>
-                Revisiting sample selection approach to positive-unlabeled learning: Turning unlabeled data into positive rather than negative.<br>
-                [ <a href="http://arxiv.org/abs/1901.10155" target="_blank">arXiv</a> ]
-            </p></li>
-            <li><p>
-                M. Kato, L. Xu, G. Niu, and M. Sugiyama.<br>
-                Alternate estimation of a classifier and the class-prior from positive and unlabeled data.<br>
-                [ <a href="http://arxiv.org/abs/1809.05710" target="_blank">arXiv</a> ]
-            </p></li>
-            <li><p>
-                M. Xu, G. Niu, B. Han, I. W. Tsang, Z.-H. Zhou, and M. Sugiyama.<br>
-                Matrix co-completion for multi-label classification with missing features and labels.<br>
-                [ <a href="http://arxiv.org/abs/1805.09156" target="_blank">arXiv</a> ]
-            </p></li>
-            <li><p>
-                T. Sakai, G. Niu, and M. Sugiyama.<br>
-                Information-theoretic representation learning for positive-unlabeled classification.<br>
-                [ <a href="http://arxiv.org/abs/1710.05359" target="_blank">arXiv</a> ]
-            </p></li>
-        </ul>
-    </div> -->
+	
+
 
     <div>
-        <h2><hr><a name="2020"></a>2020</h2>
+        <h2><hr><a name="Journal Articles"></a>Journal Articles</h2>
         <ol>
             <li><p>
-                Xuxi Chen, Wuyang Chen, Tianlong Chen, Ye Yuan, <b>Chen Gong</b>, Kewei Chen, Zhangyang Wang.<br>
-                Self-PU: Self Boosted and Calibrated Positive-Unlabeled Training.<br>
-                <i> International Conference on Machine Learning (<b>ICML</b>)</i>,  pp. 1944-1954, 2020.<br>
-<!--                                 <i><a href="http://jmlr.org/" target="_blank">Journal of Machine Learning Research</a></i>, vol. 18, no. 180, pp. 1--45, 2018.<br>
- -->
-                [ <a href="paper/chen_icml20.pdf" target="_blank">paper</a> ]
-            </p></li>
+		Guangwei Gao, Lei Zhang, Jian Yang, Lin Zhang and D. Zhang, "Reconstruction based Finger-Knuckle-Print Verification with Score Level Adaptive Binary Fusion," IEEE Trans. Image Processing, vol. 22, no. 12, pp. 5050-5062, 2013. (SCI, IF = 9.34, JCR Q1, CCF A)<br>
+
 			
 			<li><p>
                 Yao Yao, <b>Chen Gong</b>, Jiehui Deng, Jian Yang.<br>
