--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 </td>
 <td id="layout-content">
 
-    <h1 style="margin-top: 0em">Welcome to my homepage! 欢迎访问我的主页!</h1><br>
+    <h1 style="margin-top: 0em">Welcome to my homepage!</h1><br>
   <!--  <p>[ <a href="#news">News</a>,
         <a href="#interest">Research Interests</a>,
         <a href="#job">Job Experience</a>,
@@ -41,7 +41,7 @@
         <td align="left">
             <p><span style="font-size: 110%"><b>Guangwei Gao</b></span></p>
             <p>
-                Professor, PhD Supervisor (教授、博导) <br>
+                Associate Professor <br>
 				Institute of Advanced Technology<br>
 				Nanjing University of posts and Telecommunications<br>
 		   		 #9, Wen Yuan Lu, Xianlin, Nanjing, China, 210046<br>
@@ -79,12 +79,15 @@
 	<div>
         <h2><hr><a name="Work Experience"></a>Work Experience</h2>
         <ul>
+			11, 2014- 11, 2016, Postdoctoral Researcher, Nanjing University of posts and Telecommunications<br>
+			07, 2014-06, 2017, Assistant Professor, Institute of Advanced Technology, 
+	Nanjing University of posts and Telecommunications<br>
+			07, 2017-present, Associate Professor, Institute of Advanced Technology, 
+	Nanjing University of posts and Telecommunications<br>
         04, 2019-present, Project Researcher, National Institute of Informatics, Tokyo, Japan.<br>
-	07, 2017-present, Associate Professor, Institute of Advanced Technology, 
-	Nanjing University of posts and Telecommunications<br>
-	07, 2014-06, 2017, Assistant Professor, Institute of Advanced Technology, 
-	Nanjing University of posts and Telecommunications<br>
-	11, 2014- 11, 2016, Postdoctoral Researcher, Nanjing University of posts and Telecommunications<br>
+
+
+
 
 		
         </ul>
