--- a/education.html
+++ b/education.html
@@ -31,15 +31,15 @@
 <td id="layout-content">
 
 <div>
-        <h2><hr><a name="education"></a>Education</h2>
+        <h1><hr><a name="education"></a>Education</h1>
 
 
 <ul>
 <li><p>09, 2005-07, 2009，School of Math and Computer Science and Engineering, Nanjing Normal University, 
 B.S. in Information and Computation Science
-</p></li>
-<li><p>09, 2009-06, 2014, School of Computer Science and Engineering, Nanjing University of Science and Technology, Ph.D. in Pattern Recognition and Intelligence Systems, supervised by Prof. Jian Yang.  </p></li>
-<li><p>03, 2011-09, 2011, 02, 2013-08, 2013, Exchange Student, Depatment of Computing, The Hong Kong Polytechnic University, supervised by Prof. Lei Zhang.</p></li>
+</p></li><br />
+<li><p>09, 2009-06, 2014, School of Computer Science and Engineering, Nanjing University of Science and Technology, Ph.D. in Pattern Recognition and Intelligence Systems, supervised by Prof. Jian Yang.  </p></li><br />
+<li><p>03, 2011-09, 2011, 02, 2013-08, 2013, Exchange Student, Depatment of Computing, The Hong Kong Polytechnic University, supervised by Prof. Lei Zhang.</p></li><br />
 
 
 </ul>
