--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
 <td id="layout-menu">
     <div class="menu-item"><a href="index.html" class="current">Home </a></div>
 	<!-- <div class="menu-item"><a href="news.html">News</a></div> -->
-    <div class="menu-item"><a href="education.html">Education Background</a></div>
+    <div class="menu-item"><a href="education.html">Education </a></div>
 	<!-- <div class="menu-item"><a href="contact.html">Contact (联系方式)</a></div> -->
 	<div class="menu-item"><a href="publications.html">Publications</a></div>
 	<div class="menu-item"><a href="patents.html">Patents </a></div>
-	<div class="menu-item"><a href="service.html">Academic Service</a></div>
+	<div class="menu-item"><a href="service.html">Academic </a></div>
 	<div class="menu-item"><a href="codes.html">Codes </a></div>
     <div class="menu-item"><a href="teaching.html">Teaching </a></div>
 	<div class="menu-item"><a href="awards.html">Awards </a></div>
