--- a/education.html
+++ b/education.html
@@ -18,7 +18,7 @@
 	<!-- <div class="menu-item"><a href="contact.html">Contact (联系方式)</a></div> -->
 	<div class="menu-item"><a href="publications.html">Publications</a></div>
 	<div class="menu-item"><a href="patents.html">Patents</a></div>
-	<div class="menu-item"><a href="service.html">Academic </a></div>
+	<div class="menu-item"><a href="service.html">Services </a></div>
 	<div class="menu-item"><a href="codes.html">Codes</a></div>
 	    <div class="menu-item"><a href="teaching.html">Teaching (教学)</a></div>
     <div class="menu-item"><a href="awards.html">Awards (获奖情况)</a></div>
