--- a/publications.html
+++ b/publications.html
@@ -31,17 +31,25 @@
 <td id="layout-content">
 
     <h1 style="margin-top: 0em">Academic Publications</h1><br>
-    
+    	<p>[ <a href="#arXiv">arXiv</a>,
+         <a href="#2020">2020</a>,
+         <a href="#2019">2019</a>,
+         <a href="#2018">2018</a>, 
+		 <a href="#2017">2017</a>,
+		 <a href="#2016">2016</a>, 
+		 <a href="#2015">2015</a>, 
+]</p>
 
 	
 
 
     <div>
-        <h2><hr><a name="Journal Articles"></a>Journal Articles</h2>
+        <h2><hr><a name="arXiv"></a>arXiv</h2>
         <ol>
             <li><p>
 		Guangwei Gao, Lei Zhang, Jian Yang, Lin Zhang and D. Zhang, "Reconstruction based Finger-Knuckle-Print Verification with Score Level Adaptive Binary Fusion," IEEE Trans. Image Processing, vol. 22, no. 12, pp. 5050-5062, 2013. (SCI, IF = 9.34, JCR Q1, CCF A)<br>
-
+			[ <a href="https://www.sciencedirect.com/science/article/abs/pii/S092523122031359X" target="_blank">paper</a> ]
+		                </p></li>
 			
 			<li><p>
 		Guangwei Gao, Jian Yang, Xiao-Yuan Jing, Fumin Shen, Wankou Yang, Dong Yue, "Learning Robust and Discriminative Low-rank Representations for Face Recognition with Occlusion", Pattern Recognition, Vol. 66，pp. 129-143, 2017. (SCI, IF = 7.196, JCR Q1, CCF B)<br>
