--- a/patents.html
+++ b/patents.html
@@ -3,12 +3,12 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
     <link rel="stylesheet" type="text/css" href="style.css" />
-    <title>Chen Gong</title>
+    <title>Guangwei Gao</title>
     <base href="https://tanglei-sys.github.io/research.html">
 </head>
 
 <body>
-<h1 style="padding-left: 0.5em">Prof. Chen Gong (宫辰)</h1><hr>
+<h1 style="padding-left: 0.5em">Guangwei Gao (高广谓)</h1><hr>
 <table summary="Table for page layout." id="tlayout">
 <tr valign="top">
 <td id="layout-menu">
