--- a/patents.html
+++ b/patents.html
@@ -12,29 +12,29 @@
 <table summary="Table for page layout." id="tlayout">
 <tr valign="top">
 <td id="layout-menu">
-    <div class="menu-item"><a href="index.html" class="current">Home (首页)</a></div>
+    <div class="menu-item"><a href="index.html" class="current">Home</a></div>
 	<!-- <div class="menu-item"><a href="news.html">News</a></div> -->
-    <div class="menu-item"><a href="education.html">Education (教育背景)</a></div>
+    <div class="menu-item"><a href="education.html">Education</a></div>
 	<!-- <div class="menu-item"><a href="contact.html">Contact (联系方式)</a></div> -->
-	<div class="menu-item"><a href="publications.html">Publications (学术论文)</a></div>
-	<div class="menu-item"><a href="patents.html">Patents (专利)</a></div>
-	<div class="menu-item"><a href="service.html">Services (学术服务)</a></div>
-	<div class="menu-item"><a href="codes.html">Codes (代码)</a></div>
-	    <div class="menu-item"><a href="teaching.html">Teaching (教学)</a></div>
-    <div class="menu-item"><a href="awards.html">Awards (获奖情况)</a></div>
-    <div class="menu-item"><a href="talks.html">Talks (报告与讲座)</a></div>
-	<div class="menu-item"><a href="members.html">Group Members (课题组成员)</a></div>
-	<div class="menu-item"><a href="recruitement.html">Call for Students (招生信息)</a></div>
+	<div class="menu-item"><a href="publications.html">Publications</a></div>
+	<div class="menu-item"><a href="patents.html">Patents</a></div>
+	<div class="menu-item"><a href="service.html">Services</a></div>
+	<div class="menu-item"><a href="codes.html">Codes</a></div>
+	    <div class="menu-item"><a href="teaching.html">Teaching</a></div>
+    <div class="menu-item"><a href="awards.html">Awards</a></div>
+    <div class="menu-item"><a href="talks.html">Talks</a></div>
+	<div class="menu-item"><a href="members.html">Group Members</a></div>
+	<div class="menu-item"><a href="recruitement.html">Call for Students</a></div>
     <!--<div class="menu-item"><a href="codedata.html">Codes & Data</a></div>
     <!--<div class="menu-item"><a href="seminar.html">ML Seminar</a></div>-->
 </td>
 <td id="layout-content">
 
 <div>
-        <h2><hr><a name="profact"></a>Patents (专利)</h2>
+        <h2><hr><a name="profact"></a>Patents</h2>
 
 		
-		<h3>Invention Grants (发明专利授权):</h3>
+		<h3>Invention Grants:</h3>
            <ul>
             <li><p> A computer aided corpus extraction method, <b>Chen Gong</b>, Xinchao Guan, Jie Yang, CN102270242B </p></li>
             <li><p> A graph construction method by combining pairwise and neighborhood information of data points, <b>Chen Gong</b>, Keren Fu, Jie Yang, CN103093239A </p></li>
@@ -54,7 +54,7 @@
 			<li><p> 一种多车道线检测新方法，陈必科、杨健、<b>宫辰</b>，CN107045629B </p></li>
         </ul>
 
-        <h3>Invention Disclose (发明专利公布):</h3>
+        <h3>Invention Disclose:</h3>
         <ul>
             
             <li><p> A robust image clustering method，Jingchen Ke, <b>Chen Gong</b>, 201811309177.4 </p></li>
