--- a/patents.html
+++ b/patents.html
@@ -46,12 +46,12 @@
         </ul>
 		
 		<ul>
-            <li><p> 计算机辅助语料提取方法，<b>宫辰</b>、管新潮、杨杰，CN102270242B </p></li>
-            <li><p> 一种融合了点对和邻域信息的建图方法,<b>宫辰</b>，傅可人，杨杰，CN103093239A </p></li>
-	    <li><p> 一种人体动作识别的方法，<b>宫辰</b>、傅可人、杨杰，CN103164694A </p></li>
-	    <li><p> 基于测地线距离的图像显著性区域检测方法，傅可人、<b>宫辰</b>、杨杰，CN103208115A </p></li>
-	    <li><p> 一种基于时空兴趣点的打架行为检测方法,许龙、杨杰、<b>宫辰</b>，CN103279737A </p></li>
-	    <li><p> 一种多车道线检测新方法，陈必科、杨健、<b>宫辰</b>，CN107045629B </p></li>
+            <li><p> 一种基于Gabor响应域重构的指关节纹识别方法，ZL201510152822.6 </p></li>
+            <li><p> 一种融合了点对和邻域信息的建图方法, ZL201511019000.7 </p></li>
+	    <li><p> 一种基于双核范数正则的多姿态人脸图像质量增强方法，ZL201710223815.X </p></li>
+	    <!--<li><p> 基于测地线距离的图像显著性区域检测方法，傅可人、<b>宫辰</b>、杨杰，CN103208115A </p></li>-->
+	    <!--<li><p> 基于核范数正则低秩编码的风机叶片图像故障识别方法,许龙、杨杰、<b>宫辰</b>，CN103279737A </p></li>-->
+	    <!--<li><p> 一种多车道线检测新方法，陈必科、杨健、<b>宫辰</b>，CN107045629B </p></li>-->
         </ul>
 
         <h3>Invention Disclose:</h3>
