--- a/patents.html
+++ b/patents.html
@@ -64,9 +64,13 @@
 		
 		<ul>
             
-            <li><p> 一种鲁棒的图像聚类方法，柯京辰、<b>宫辰</b>，201811309177.4 </p></li>
-            <li><p> 一种图像聚类方法，姚垚、<b>宫辰</b>、杨健，201810450932.4 </p></li>
-            <li><p> 基于单类别的乳腺癌数据分类方法，史红、<b>宫辰</b>、魏旸、杨健，201910389044.0 </p></li>
+            <li><p> 基于耦合字典学习的低秩核范数正则人脸图像超分辨方法，201710328907.4 </p></li>
+            <li><p> 基于双低秩表示和局部约束矩阵回归的鲁棒图像识别方法，201710569014.9 </p></li>
+            <li><p> 一种基于局部和稀疏非局部正则的人脸图像超分辨率方法，201910051451.0 </p></li>
+	    <li><p> 一种基于特征表示集的跨分辨率人脸识别方法，201910055693.7 </p></li>
+	    <li><p> 基于L2正则化梯度约束稀疏表示的人脸识别方法，201910733434.5 </p></li>
+	    <li><p> 一种基于多尺度上下文信息融合的鲁棒人脸识别方法，201911163739.3 </p></li>
+	    <li><p> 一种基于卷积神经网络特征的跨质量人脸识别方法，201911164077.1 </p></li>
         </ul>
 
     </div>
