--- a/service.html
+++ b/service.html
@@ -59,6 +59,16 @@
 			<li><p>Pattern Recognition Letters</p></li>
         </ul>
 	
+	<ul>
+	    <h3>SPC/PC Member for</h3>
+            <li><p>ISAIR(2017-2020), ACPR (2017), ICONIP (2017), IEEE WCSP (2017) </p></li>	
+        </ul>
+	
+	<ul>
+	    <h3>Organizer Member for</h3>
+            <li><p>IEEE ICME 2021 Special Session "Advanced Representation Learning for Robust Multimedia Image Understanding"  </p></li>	
+        </ul>
+	
 		
 		
 
