--- a/service.html
+++ b/service.html
@@ -66,7 +66,11 @@
 	
 	<ul>
 	    <h3>Organizer Member for</h3>
-            <li><p>IEEE ICME 2021 Special Session "Advanced Representation Learning for Robust Multimedia Image Understanding"  </p></li>	
+            <li><p>IEEE ICME 2021 Special Session "Advanced Representation Learning for Robust Multimedia Image Understanding"  </p></li>
+	    <li><p>Publicity co-chairs for IEEE International Conference on Multimedia Big Data (IEEE BigMM) </p></li>
+	    <li><p>Publicity co-chairs for International Symposium on Artificial Intelligence and Robotics (ISAIR): 2021 </p></li>
+	    <li><p>PRCV2020专题论坛 </p></li>
+	    <li><p>CCF-CV走进高校系列活动: 南京邮电大学(第九十三期) </p></li>
         </ul>
 	
 		
