--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
 	<div class="menu-item"><a href="codes.html">Codes </a></div>
     <div class="menu-item"><a href="teaching.html">Teaching </a></div>
 	<div class="menu-item"><a href="awards.html">Awards </a></div>
-    <div class="menu-item"><a href="talks.html">Talks (报告与讲座)</a></div>
-	<div class="menu-item"><a href="members.html">Group Members (课题组成员)</a></div>
-	<div class="menu-item"><a href="recruitement.html">Call for Students (招生信息)</a></div>
+    <div class="menu-item"><a href="talks.html">Talks</a></div>
+	<div class="menu-item"><a href="members.html">Group Members</a></div>
+	<div class="menu-item"><a href="recruitement.html">Call for Students</a></div>
     <!--<div class="menu-item"><a href="codedata.html">Codes & Data</a></div>
     <!--<div class="menu-item"><a href="seminar.html">ML Seminar</a></div>-->
 </td>
