--- a/publications.html
+++ b/publications.html
@@ -58,7 +58,7 @@
 
 			<li><p>
                 Feng Chen, Fei Wu, Jing Xu, Guangwei Gao, Qi Ge, Xiao-Yuan Jing, Adaptive Deformable Convolutional Network, Neurocomputing, accepted , 2020. (JCR Q1)  <br>
-						[ <a href="https://arxiv.org/abs/2007.09858" target="_blank">paper</a> ]           			
+						[ <a href="https://www.sciencedirect.com/science/article/abs/pii/S092523122031359X" target="_blank">paper</a> ]           			
  </p></li>
 			<li><p>
                Guangwei Gao, Dong Zhu, Huimin Lu, Yi Yu, Heyou Chang, Dong Yue, Robust Facial Image Super-Resolution by Kernel Locality-Constrained Coupled-Layer Regression, ACM Transactions on Internet Technology (TOIT), accepted , 2020. (JCR Q1, CCF B) <br>
