--- a/teaching.html
+++ b/teaching.html
@@ -3,47 +3,46 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
     <link rel="stylesheet" type="text/css" href="style.css" />
-    <title>Chen Gong</title>
+    <title>Guangwei Gao</title>
     <base href="https://gcatnjust.github.io/ChenGong/research.html">
 </head>
 
 <body>
-<h1 style="padding-left: 0.5em">Prof. Chen Gong (宫辰)</h1><hr>
+<h1 style="padding-left: 0.5em">Guangwei Gao (高广谓)</h1><hr>
 <table summary="Table for page layout." id="tlayout">
 <tr valign="top">
 <td id="layout-menu">
-    <div class="menu-item"><a href="index.html" class="current">Home (首页)</a></div>
+    <div class="menu-item"><a href="index.html" class="current">Home</a></div>
 	<!-- <div class="menu-item"><a href="news.html">News</a></div> -->
-    <div class="menu-item"><a href="education.html">Education (教育背景)</a></div>
+    <div class="menu-item"><a href="education.html">Education</a></div>
 	<!-- <div class="menu-item"><a href="contact.html">Contact (联系方式)</a></div> -->
-	<div class="menu-item"><a href="publications.html">Publications (学术论文)</a></div>
-	<div class="menu-item"><a href="patents.html">Patents (专利)</a></div>
-	<div class="menu-item"><a href="service.html">Services (学术服务)</a></div>
-	<div class="menu-item"><a href="codes.html">Codes (代码)</a></div>
-	    <div class="menu-item"><a href="teaching.html">Teaching (教学)</a></div>
-    <div class="menu-item"><a href="awards.html">Awards (获奖情况)</a></div>
-    <div class="menu-item"><a href="talks.html">Talks (报告与讲座)</a></div>
-	<div class="menu-item"><a href="members.html">Group Members (课题组成员)</a></div>
-	<div class="menu-item"><a href="recruitement.html">Call for Students (招生信息)</a></div>
+	<div class="menu-item"><a href="publications.html">Publications</a></div>
+	<div class="menu-item"><a href="patents.html">Patents</a></div>
+	<div class="menu-item"><a href="service.html">Services</a></div>
+	<div class="menu-item"><a href="codes.html">Codes</a></div>
+	    <div class="menu-item"><a href="teaching.html">Teaching</a></div>
+    <div class="menu-item"><a href="awards.html">Awards</a></div>
+    <div class="menu-item"><a href="talks.html">Talks</a></div>
+	<div class="menu-item"><a href="members.html">Group Members</a></div>
+	<div class="menu-item"><a href="recruitement.html">Call for Students</a></div>
     <!--<div class="menu-item"><a href="codedata.html">Codes & Data</a></div>
     <!--<div class="menu-item"><a href="seminar.html">ML Seminar</a></div>-->
 </td>
 <td id="layout-content">
 
 <div>
-        <h2><hr><a name="profact"></a>Teaching (教学)</h2>
+        <h2><hr><a name="profact"></a>Teaching</h2>
 
 		
-			<h3>Undergraduate Courses (本科生课程):</h3>
+	<h3>Undergraduate Courses:</h3>
         <ul>
-            <li><p>Critical Scientific Thinking of Famous Scientists: AI Direction (科学家的科学：人工智能方向): Spring & Autumn semesters, only for Hsue-shen Tsien Elite College (春季&秋季学期，面向钱学森学院)</p></li>
-            <li><p>Machine Learning (机器学习): Autumn semester, for School of Computer Science and Engineering (秋季学期，面向计算机科学与工程学院)  </p></li>			
+            <li><p>Algorithm Analysis and Design (算法分析与设计): for School of Computer Science and Engineering </p></li>			
         </ul>
 	
 		
-		<h3>Graduate Courses (研究生课程):</h3>
+	<h3>Graduate Courses:</h3>
         <ul>
-            <li><p>To be announced  </p></li>			
+            <li><p>Pattern Recognition  </p></li>			
 			
         </ul>
 			
