--- a/teaching.html
+++ b/teaching.html
@@ -4,7 +4,7 @@
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
     <link rel="stylesheet" type="text/css" href="style.css" />
     <title>Guangwei Gao</title>
-    <base href="https://gcatnjust.github.io/ChenGong/research.html">
+    <base href="https://tanglei-sys.github.io/research.html">
 </head>
 
 <body>
