--- a/talks.html
+++ b/talks.html
@@ -3,61 +3,62 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
     <link rel="stylesheet" type="text/css" href="style.css" />
-    <title>Chen Gong</title>
-    <base href="https://gcatnjust.github.io/ChenGong/awards.html">
+    <title>Guangwei Gao</title>
+    <base href="https://tanglei-sys.github.io/awards.html">
 </head>
 
 <body>
-<h1 style="padding-left: 0.5em">Prof. Chen Gong (宫辰)</h1><hr>
+<h1 style="padding-left: 0.5em">Guangwei Gao (高广谓)</h1><hr>
 <table summary="Table for page layout." id="tlayout">
 <tr valign="top">
 <td id="layout-menu">
-    <div class="menu-item"><a href="index.html" class="current">Home (首页)</a></div>
+    <div class="menu-item"><a href="index.html" class="current">Home</a></div>
 	<!-- <div class="menu-item"><a href="news.html">News</a></div> -->
-    <div class="menu-item"><a href="education.html">Education (教育背景)</a></div>
+    <div class="menu-item"><a href="education.html">Education</a></div>
 	<!-- <div class="menu-item"><a href="contact.html">Contact (联系方式)</a></div> -->
-	<div class="menu-item"><a href="publications.html">Publications (学术论文)</a></div>
-	<div class="menu-item"><a href="patents.html">Patents (专利)</a></div>
-	<div class="menu-item"><a href="service.html">Services (学术服务)</a></div>
-	<div class="menu-item"><a href="codes.html">Codes (代码)</a></div>
-	    <div class="menu-item"><a href="teaching.html">Teaching (教学)</a></div>
-    <div class="menu-item"><a href="awards.html">Awards (获奖情况)</a></div>
-    <div class="menu-item"><a href="talks.html">Talks (报告与讲座)</a></div>
-	<div class="menu-item"><a href="members.html">Group Members (课题组成员)</a></div>
-	<div class="menu-item"><a href="recruitement.html">Call for Students (招生信息)</a></div>
+	<div class="menu-item"><a href="publications.html">Publications</a></div>
+	<div class="menu-item"><a href="patents.html">Patents</a></div>
+	<div class="menu-item"><a href="service.html">Services</a></div>
+	<div class="menu-item"><a href="codes.html">Codes</a></div>
+	    <div class="menu-item"><a href="teaching.html">Teaching</a></div>
+    <div class="menu-item"><a href="awards.html">Awards</a></div>
+    <div class="menu-item"><a href="talks.html">Talks</a></div>
+	<div class="menu-item"><a href="members.html">Group Members</a></div>
+	<div class="menu-item"><a href="recruitement.html">Call for Students</a></div>
     <!--<div class="menu-item"><a href="codedata.html">Codes & Data</a></div>
     <!--<div class="menu-item"><a href="seminar.html">ML Seminar</a></div>-->
 </td>
 <td id="layout-content">
 
 <div>
-        <h2><hr><a name="profact"></a>Talks (报告与讲座)</h2>
+        <h2><hr><a name="profact"></a>Talks</h2>
 		
 		
-		<ul>
-            <li><p> Southeast University：2016.12.23 </p></li>
-            <li><p> Shanghai University：2017.4.17  </p></li>
-			<li><p> CCF YOCSEF “Image Processing and Machine Learning” Summer School@NJUST：2017.7.3 </p></li>
-			<li><p> The 1st Target Recognition and Artificial Intelligence Summit Forum：2017.7.26 </p></li>
-		    <li><p> Southeast University：2017.10.23 </p></li>
-			<li><p> Wuhan University：2018.3.29</p></li>
-			<li><p> Inner Monogolia University：2018.6.1 </p></li>
-			<li><p> Nanjing University：2018.6.11 </p></li>
-			<li><p> Jiangnan University：2018.9.26 </p></li>
-			<li><p> NanJing XiaoZhuang University：2018.10.12 </p></li>
-			<li><p> Nanjing University of Information Science & Technology：2018.10.27 </p></li>
-			<li><p> Shenzhen Institutes of Advanced Technology，Chinese Academy of Sciences：2018.12.19</p></li>
-			<li><p> National University of Defense Technology：2019.3.19 </p></li>
-			<li><p> Hangzhou Dianzi University：2019.3.29 </p></li>
-			<li><p> Horizaon Lab@Nanjing：2019.4.24 </p></li>
-			<li><p> Southeast University：2019.6.21 </p></li>
-			<li><p> JSAI Machine Learning MINI Seminar@Nanjing University of Posts and Telecommunications：2019.6.28 </p></li>
-			<li><p> The 2nd Target Recognition and Artificial Intelligence Summit Forum：2019.8.29</p></li>
-			<li><p> CAIIAM 2019 Young Scientists Forum (host)：2019.12.1</p></li>
-			<li><p> AIIMOOC Online Talk：2020.2.26</p></li>
-			<li><p> VALSE Webinar on Weakly Supervised Learning (host)：2020.4.1</p></li>
-			<li><p> Low-quality Data Mining and Learning workshop@CCDM 2020：2020.8.17</p></li>
-			<li><p> JiangSu Computer Conference (JSCC) 2020：2020.9.6  </p></li>
+	  <ul>
+            <li><p> International Conference on Image Processing (ICIP)@Phoenix of USA：2016.09.26 </p></li>
+            <li><p> International Conference on Machine Intelligence (ICMI)@Kitakyushu of Japan：2019.5.20  </p></li>
+	    <li><p> International Symposium on Artificial Intelligence and Robotics (ISAIR)@Daegu of Korea：2019.8.20 </p></li>
+	    <li><p> International Conference on Machine Intelligence (ICMI)@Portoroz of Slovenia (Virtual)：2020.9.22 </p></li>
+            
+	    <!--<li><p> Southeast University：2017.10.23 </p></li>
+	    <li><p> Wuhan University：2018.3.29</p></li>
+	    <li><p> Inner Monogolia University：2018.6.1 </p></li>
+	    <li><p> Nanjing University：2018.6.11 </p></li>
+	    <li><p> Jiangnan University：2018.9.26 </p></li>
+	    <li><p> NanJing XiaoZhuang University：2018.10.12 </p></li>
+	    <li><p> Nanjing University of Information Science & Technology：2018.10.27 </p></li>
+	    <li><p> Shenzhen Institutes of Advanced Technology，Chinese Academy of Sciences：2018.12.19</p></li>
+	    <li><p> National University of Defense Technology：2019.3.19 </p></li>
+	    <li><p> Hangzhou Dianzi University：2019.3.29 </p></li>
+	    <li><p> Horizaon Lab@Nanjing：2019.4.24 </p></li>
+	    <li><p> Southeast University：2019.6.21 </p></li>
+	    <li><p> JSAI Machine Learning MINI Seminar@Nanjing University of Posts and Telecommunications：2019.6.28 </p></li>
+	    <li><p> The 2nd Target Recognition and Artificial Intelligence Summit Forum：2019.8.29</p></li>
+	    <li><p> CAIIAM 2019 Young Scientists Forum (host)：2019.12.1</p></li>
+	    <li><p> AIIMOOC Online Talk：2020.2.26</p></li>
+	    <li><p> VALSE Webinar on Weakly Supervised Learning (host)：2020.4.1</p></li>
+	    <li><p> Low-quality Data Mining and Learning workshop@CCDM 2020：2020.8.17</p></li>
+	    <li><p> JiangSu Computer Conference (JSCC) 2020：2020.9.6  </p></li>
         </ul>
  </div>
 <br/>
@@ -88,7 +89,7 @@
 			<li><p> VALSE Webinar on 弱监督机器学习专题论坛（主持）：2020.4.1</p></li>
 			<li><p> CCDM 2020低质量数据挖掘与学习论坛：2020.8.17</p></li>
 			<li><p> 江苏省计算机大会：2020.9.6</p></li>
-        </ul>
+        </ul>-->
 
         
 
