--- a/talks.html
+++ b/talks.html
@@ -39,6 +39,7 @@
             <li><p> International Conference on Machine Intelligence (ICMI)@Kitakyushu of Japan：2019.5.20  </p></li>
 	    <li><p> International Symposium on Artificial Intelligence and Robotics (ISAIR)@Daegu of Korea：2019.8.20 </p></li>
 	    <li><p> International Conference on Machine Intelligence (ICMI)@Portoroz of Slovenia (Virtual)：2020.9.22 </p></li>
+            <li><p> Suzhou University of Science and Technology：2020.9.28 </p></li>
             
 	    <!--<li><p> Southeast University：2017.10.23 </p></li>
 	    <li><p> Wuhan University：2018.3.29</p></li>
