--- a/recruitement.html
+++ b/recruitement.html
@@ -3,42 +3,42 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
     <link rel="stylesheet" type="text/css" href="style.css" />
-    <title>Chen Gong</title>
-    <base href="https://gcatnjust.github.io/ChenGong/recruitement.html">
+    <title>Guangwei Gao</title>
+    <base href="https://tanglei-sys.github.io/recruitement.html">
 </head>
 
 <body>
-<h1 style="padding-left: 0.5em">Prof. Chen Gong (宫辰)</h1><hr>
+<h1 style="padding-left: 0.5em">Guangwei Gao (高广谓)</h1><hr>
 <table summary="Table for page layout." id="tlayout">
 <tr valign="top">
 <td id="layout-menu">
-    <div class="menu-item"><a href="index.html" class="current">Home (首页)</a></div>
+    <div class="menu-item"><a href="index.html" class="current">Home</a></div>
 	<!-- <div class="menu-item"><a href="news.html">News</a></div> -->
-    <div class="menu-item"><a href="education.html">Education (教育背景)</a></div>
+    <div class="menu-item"><a href="education.html">Education</a></div>
 	<!-- <div class="menu-item"><a href="contact.html">Contact (联系方式)</a></div> -->
-	<div class="menu-item"><a href="publications.html">Publications (学术论文)</a></div>
-	<div class="menu-item"><a href="patents.html">Patents (专利)</a></div>
-	<div class="menu-item"><a href="service.html">Services (学术服务)</a></div>
-	<div class="menu-item"><a href="codes.html">Codes (代码)</a></div>
-	    <div class="menu-item"><a href="teaching.html">Teaching (教学)</a></div>
-    <div class="menu-item"><a href="awards.html">Awards (获奖情况)</a></div>
-    <div class="menu-item"><a href="talks.html">Talks (报告与讲座)</a></div>
-	<div class="menu-item"><a href="members.html">Group Members (课题组成员)</a></div>
-	<div class="menu-item"><a href="recruitement.html">Call for Students (招生信息)</a></div>
+	<div class="menu-item"><a href="publications.html">Publications</a></div>
+	<div class="menu-item"><a href="patents.html">Patents</a></div>
+	<div class="menu-item"><a href="service.html">Services</a></div>
+	<div class="menu-item"><a href="codes.html">Codes</a></div>
+	    <div class="menu-item"><a href="teaching.html">Teaching</a></div>
+    <div class="menu-item"><a href="awards.html">Awards</a></div>
+    <div class="menu-item"><a href="talks.html">Talks)</a></div>
+	<div class="menu-item"><a href="members.html">Group Members</a></div>
+	<div class="menu-item"><a href="recruitement.html">Call for Students</a></div>
     <!--<div class="menu-item"><a href="codedata.html">Codes & Data</a></div>
     <!--<div class="menu-item"><a href="seminar.html">ML Seminar</a></div>-->
 </td>
 <td id="layout-content">
 
 <div>
-        <h2><hr><a name="research"></a>Prospective PhD/MPhil students</h2>
+        <h2><hr><a name="research"></a>Prospective MPhil students</h2>
 
 <ul>
-<p style="color:red;">I am currently recruiting self-motivated PhD and MPhil students. Please carefully read the following contents before sending me an E-mail:</p>
+<p style="color:red;">I am currently recruiting self-motivated MPhil students. Please carefully read the following contents before sending me an E-mail:</p>
 </ul>
 <ul>
 <li><p><b>Research interests</b>: I mainly study how to design advanced machine learning algorithms using mathematical tools, which can be further applied to computer vision, data mining, and other fields. 
-Recent research interests include weakly supervised learning (e.g., semi-supervised learning, label noise robust learning, PU learning, partial label learning, etc.), interactive machine learning (curriculum learning, machine teaching, etc.).
+Recent research interests include representation learning  theory  with applications to biometrics (Heterogeneous face recognition, etc), image processing (face hallucination, etc), analysis and processing of multi-media data.
 </p></li>
 <li><p><b>Admission expectations</b>: I prefer the students who have solid mathematical foundations, strong programming skills, and good English abilities (listening/speaking/reading/writing).
 The experiences in research (e.g. academic competition, publications, extracurricular academic activities, etc.) will be a benefit.</p></li>
@@ -49,12 +49,12 @@ broad academic vision, and important scientific literacy for independent problem
 2) Provide you enjoyable scientific research atmosphere, comfortable research environment, generous allowance/rewards, and efficient computing equipment;
 3) I will not let you deal with administrative affairs that are not related to your research, so as to ensure that you have sufficient time for your research; 
 4) For the students who succesfully get their papers accepted by top conferences, I will try my best to financially support them to participate in the conferences; 
-5) For outstanding PhD students, I will provide a joint training opportunity with overseas universities with a duration of 0.5-2 years; 
+5) For outstanding MPhil students, I will provide a joint training opportunity with overseas universities with a duration of 3-6 months; 
 6) For outstanding graduates, I would be happy to write recommendation letters for job hunting or university application.</p></li>
 </ul>
 <br/>
 <ul>
-<p style="color:red;">首先，非常欢迎考虑报考我的研究生！在给我写邮件之前，请您先仔细阅读下面的文字，并确认我们在科研观念、兴趣上一致:</p>
+<!--<p style="color:red;">首先，非常欢迎考虑报考我的研究生！在给我写邮件之前，请您先仔细阅读下面的文字，并确认我们在科研观念、兴趣上一致:</p>
 </ul>
 <ul>
 <li><p><b>研究兴趣</b>：主要研究如何使用数学工具设计先进机器学习算法，并广泛应用于计算机视觉、数据挖掘等多个领域。
@@ -64,7 +64,7 @@ broad academic vision, and important scientific literacy for independent problem
 在校期间在世界顶级期刊或会议上发表高水平、有影响力的论文，并有志于毕业后继续从事学术研究工作。</p></li>
 <li><p><b>我的承诺</b>：1）因我本人始终亲临科研一线，因此会在算法设计、代码编写、实验验证、论文撰写、专利申请、科研成果展示等给予你全方位的有效指导；2）提供浓厚的科研氛围、舒适的科研环境、丰厚的科研奖励、高效的运算设备；3）我几乎不会让你处理报账、递送材料、拿快递等与科研无关的行政事务，从而保证你有充足的、整块的科研时间；4）对于在顶会上发表论文的学生，会从学校参会资助和本人科研经费两方面积极资助你参会（只要没出地球）；
 5）对于表现优秀的博士生，至少提供一次0.5-2年的海外访学联培机会；6）对于表现优秀的学生，我很乐意在毕业后给你推荐工作或深造机会。</p></li>
-</ul>
+</ul>-->
 
 <!-- <ul>
 I prefer students having strong machine learning background *before* joining my group. If you are interested in my group, I strongly recommend you to read as many of the following books as possible before applying:
