--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
  <div>
         <h2><hr><a name="news"></a>News</h2>
         <ul>
-		   <li><p> [10/2020] Our special session titled "Advanced Representation Learning for Robust Multimedia Image Understanding" got accepted at <a href="https://2021.ieeeicme.org/"></a>ICME2021, with Prof. Junjun Jiang, Prof. Licheng Liu, Prof. Tao Lu, and Prof. Jingang Shi  </p></li>
+		   <li><p> [10/2020] Our special session titled "Advanced Representation Learning for Robust Multimedia Image Understanding" got accepted at <a href="https://2021.ieeeicme.org/">ICME2021</a>, with Prof. Junjun Jiang, Prof. Licheng Liu, Prof. Tao Lu, and Prof. Jingang Shi  </p></li>
 		   
 		   <li><p> [09/2020] One paper was accepted by <i><b>Neurocomputing</b></i> </p></li>
 		   
