--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@ My research interests lie in machine learning, data mining, and learning-based v
     </div>-->
 
     <div>
-    <h2><hr><a name="sponsors"></a>Sponsors (资助机构)</h2>
+    <h2><hr><a name="sponsors"></a>Sponsors</h2>
     <img src="nsfc.jpg" alt="NSFC" />
     <!-- <img src="arc-beta.jpg" alt="Australian Research Council" />
     <img src="logo-gbca-beta.jpg" alt="Global Business College of Australia" /> -->
