--- a/publications.html
+++ b/publications.html
@@ -35,10 +35,10 @@
          <a href="#2020">2020</a>,
          <a href="#2019">2019</a>,
          <a href="#2018">2018</a>, 
-		 <a href="#2017">2017</a>,
-		 <a href="#2016">2016</a>, 
-		 <a href="#2015">2015</a>, 
-]</p>
+	 <a href="#2017">2017</a>,
+	 <a href="#2016">2016</a>, 
+	 <a href="#2015">2015 and before</a>, 
+        ]</p>
 
 	
 
@@ -47,9 +47,11 @@
         <h2><hr><a name="arXiv"></a>arXiv</h2>
         <ol>
             <li><p>
-		Guangwei Gao, Lei Zhang, Jian Yang, Lin Zhang and D. Zhang, "Reconstruction based Finger-Knuckle-Print Verification with Score Level Adaptive Binary Fusion," IEEE Trans. Image Processing, vol. 22, no. 12, pp. 5050-5062, 2013. (SCI, IF = 9.34, JCR Q1, CCF A)<br>
-			[ <a href="https://arxiv.org/abs/2007.09858" target="_blank">paper</a> ]
-		                </p></li>
+		Hao Ding, Songsong Wu, Hao Tang, Fei Wu, Guangwei Gao, Xiao-Yuan Jing. <br>
+		Cross-View Image Synthesis with Deformable Convolution and Attention Mechanism.<br>
+		arXiv:2007.09858, 2020<br>
+		[ <a href="https://arxiv.org/abs/2007.09858" target="_blank">paper</a> ]
+		</p></li>
         </ol>
     </div>
 	 <div>
