--- a/publications.html
+++ b/publications.html
@@ -64,21 +64,29 @@
 		<i><b>Neurocomputing</i></b>, accepted, 2020. (JCR Q1) <br>
 		[ <a href="https://www.sciencedirect.com/science/article/abs/pii/S092523122031359X" target="_blank">paper</a> ]           			
  </p></li>
-			<li><p>
-               Guangwei Gao, Dong Zhu, Huimin Lu, Yi Yu, Heyou Chang, Dong Yue, Robust Facial Image Super-Resolution by Kernel Locality-Constrained Coupled-Layer Regression, ACM Transactions on Internet Technology (TOIT), accepted , 2020. (JCR Q1, CCF B) <br>
-				  
+		       <li><p>
+               Guangwei Gao, Dong Zhu, Huimin Lu, Yi Yu, Heyou Chang, Dong Yue.<br>
+	       Robust Facial Image Super-Resolution by Kernel Locality-Constrained Coupled-Layer Regression.<br>
+	       <i>ACM Transactions on Internet Technology (<b>TOIT</b>)</i>, accepted, 2020. (JCR Q1, CCF B) <br>
+	       [ paper] 		  
 </p></li>	
 			<li><p>
-		Guangwei Gao, Yi Yu, Jin Xie, Jian Yang, Meng Yang, Jian Zhang, Constructing multilayer locality-constrained matrix regression framework for noise robust face super-resolution, Pattern Recognition (PR), https://doi.org/10.1016/j.patcog.2020.107539, 2020. (JCR Q1, CCF B)<br>
-      			[ <a href="https://www.sciencedirect.com/science/article/abs/pii/S0031320320303423" target="_blank">paper</a> ]           			
+		Guangwei Gao, Yi Yu, Jin Xie, Jian Yang, Meng Yang, Jian Zhang.<br> 
+		Constructing multilayer locality-constrained matrix regression framework for noise robust face super-resolution.<br>
+		<i>Pattern Recognition (<b>PR</b>)</i>, https://doi.org/10.1016/j.patcog.2020.107539, 2020. (JCR Q1, CCF B)<br>
+      		[ <a href="https://www.sciencedirect.com/science/article/abs/pii/S0031320320303423" target="_blank">paper</a> ]           			
  </p></li>	
 	  		<li><p>
-                Guangwei Gao, Yi Yu, Meng Yang, Heyou Chang, Pu Huang, Dong Yue, Cross-resolution face recognition with pose variations via multilayer locality-constrained structural orthogonal procrustes regression, Information Sciences (IS), 506: 19-36 (2020). (JCR Q1, CCF B)<br>
-			      			[ <a href="https://www.sciencedirect.com/science/article/pii/S0020025519307303" target="_blank">paper</a> ]           			
+                Guangwei Gao, Yi Yu, Meng Yang, Heyou Chang, Pu Huang, Dong Yue.<br>
+		Cross-resolution face recognition with pose variations via multilayer locality-constrained structural orthogonal procrustes regression.<br>
+		<i>Information Sciences (<b>IS</b>)</i>, 506: 19-36 (2020). (JCR Q1, CCF B)<br>
+                [ <a href="https://www.sciencedirect.com/science/article/pii/S0020025519307303" target="_blank">paper</a> ]           			
  </p></li>	
 			<li><p>
-                Guangwei Gao, Yi Yu, Meng Yang, Pu Huang, Qi Ge, Dong Yue, Multi-scale patch based representation feature learning for low-resolution face recognition, Applied Soft Computing (ASOC), 90: 106183, 2020. (JCR Q1) <br>
-            			      			[ <a href="https://www.sciencedirect.com/science/article/abs/pii/S156849462030123X" target="_blank">paper</a> ]           			
+                Guangwei Gao, Yi Yu, Meng Yang, Pu Huang, Qi Ge, Dong Yue.<br>
+		Multi-scale patch based representation feature learning for low-resolution face recognition<br> 
+		<i>Applied Soft Computing (<b>ASOC</b>)</i>, 90: 106183, 2020. (JCR Q1) <br>
+            	[ <a href="https://www.sciencedirect.com/science/article/abs/pii/S156849462030123X" target="_blank">paper</a> ]           			
  </p></li>	
 
 			<li><p>
