--- a/publications.html
+++ b/publications.html
@@ -84,19 +84,22 @@
  </p></li>	
 			<li><p>
                 Guangwei Gao, Yi Yu, Meng Yang, Pu Huang, Qi Ge, Dong Yue.<br>
-		Multi-scale patch based representation feature learning for low-resolution face recognition<br> 
+		Multi-scale patch based representation feature learning for low-resolution face recognition.<br> 
 		<i>Applied Soft Computing (<b>ASOC</b>)</i>, 90: 106183, 2020. (JCR Q1) <br>
             	[ <a href="https://www.sciencedirect.com/science/article/abs/pii/S156849462030123X" target="_blank">paper</a> ]           			
  </p></li>	
-
+                        li><p>
+   		Guangwei Gao, Dong Zhu, Meng Yang, Huimin Lu, Wankou Yang, Hao Gao.<br>
+		Face Image Super Resolution with Pose via Nuclear Norm Regularized Structural Orthogonal Procrustes Regression.<br>
+		<i>Neural Computing and Applications (<b>NCAA</b>)<i>, 32(9): 4361-4371, 2020. (JCR Q1)<br>
+		[ <a href="https://link.springer.com/article/10.1007/s00521-018-3826-1" target="_blank">paper</a> ]
 			<li><p>
 		Guangwei Gao, Jian Yang, Zhihui Lai, Pu Huang, Jiejin Jiang, Hao Gao and Dong Yue, "Nuclear norm regularized coding with local position-patch and nonlocal similarity for face hallucination", Digital Signal Processing, Vol. 64,pp.107-120, 2017. (SCI, IF = 2.871, JCR Q1)<br>
 			
 			<li><p>
                 Guangwei Gao, Zangyi Hu, Pu Huang, Meng Yang, Quan Zhou, Songsong Wu and Dong Yue, "Robust Low-Resolution Face Recognition via Low-rank Representation and Locality-constrained Regression", Computers and Electrical Engineering, Vol.70, pp. 968-977, 2018. (SCI, IF = 2.663, JCR Q1)<br>
 
-            <li><p>
-   		Guangwei Gao, Dong Zhu, Meng Yang, Huimin Lu, Wankou Yang, Hao Gao, "Face Image Super Resolution with Pose via Nuclear Norm Regularized Structural Orthogonal Procrustes Regression ", Neural Computing and Applications, Vol.32, no. 9, pp. 4361-4371, 2020. (SCI, IF = 4.774, JCR Q1)<br>
+            <
 			
         </ol>
     </div>
