--- a/publications.html
+++ b/publications.html
@@ -46,8 +46,8 @@
     <div>
         <h2><hr><a name="arXiv"></a>arXiv</h2>
         <ol>
-            <li><p>
-		Hao Ding, Songsong Wu, Hao Tang, Fei Wu, Guangwei Gao, Xiao-Yuan Jing. <br>
+                 <li><p>
+		Hao Ding, Songsong Wu, Hao Tang, Fei Wu, <b>Guangwei Gao</b>, Xiao-Yuan Jing. <br>
 		Cross-View Image Synthesis with Deformable Convolution and Attention Mechanism.<br>
 		arXiv:2007.09858, 2020<br>
 		[ <a href="https://arxiv.org/abs/2007.09858" target="_blank">paper</a> ]
@@ -58,52 +58,152 @@
 	 <div>
         <h2><hr><a name="2020"></a>2020</h2>
         <ol>
-	   <li><p>
-                Feng Chen, Fei Wu, Jing Xu, Guangwei Gao, Qi Ge, Xiao-Yuan Jing.<br> 
+	               <li><p>
+                Feng Chen, Fei Wu, Jing Xu, <b>Guangwei Gao</b>, Qi Ge, Xiao-Yuan Jing.<br> 
 		Adaptive Deformable Convolutional Network.<br>
 		<i><b>Neurocomputing</i></b>, accepted, 2020. (JCR Q1) <br>
 		[ <a href="https://www.sciencedirect.com/science/article/abs/pii/S092523122031359X" target="_blank">paper</a> ]           			
                        </p></li>
 		       <li><p>
-               Guangwei Gao, Dong Zhu, Huimin Lu, Yi Yu, Heyou Chang, Dong Yue.<br>
+               <b>Guangwei Gao</b>, Dong Zhu, Huimin Lu, Yi Yu, Heyou Chang, Dong Yue.<br>
 	       Robust Facial Image Super-Resolution by Kernel Locality-Constrained Coupled-Layer Regression.<br>
 	       <i>ACM Transactions on Internet Technology (<b>TOIT</b>)</i>, accepted, 2020. (JCR Q1, CCF B) <br>
 	       [ paper] 		  
                        </p></li>	
 			<li><p>
-		Guangwei Gao, Yi Yu, Jin Xie, Jian Yang, Meng Yang, Jian Zhang.<br> 
+		<b>Guangwei Gao</b>, Yi Yu, Jin Xie, Jian Yang, Meng Yang, Jian Zhang.<br> 
 		Constructing multilayer locality-constrained matrix regression framework for noise robust face super-resolution.<br>
 		<i>Pattern Recognition (<b>PR</b>)</i>, https://doi.org/10.1016/j.patcog.2020.107539, 2020. (JCR Q1, CCF B)<br>
       		[ <a href="https://www.sciencedirect.com/science/article/abs/pii/S0031320320303423" target="_blank">paper</a> ]           			
                         </p></li>	
 	  		<li><p>
-                Guangwei Gao, Yi Yu, Meng Yang, Heyou Chang, Pu Huang, Dong Yue.<br>
+                <b>Guangwei Gao</b>, Yi Yu, Meng Yang, Heyou Chang, Pu Huang, Dong Yue.<br>
 		Cross-resolution face recognition with pose variations via multilayer locality-constrained structural orthogonal procrustes regression.<br>
-		<i>Information Sciences (<b>IS</b>)</i>, 506: 19-36 (2020). (JCR Q1, CCF B)<br>
+		<i>Information Sciences (<b>IS</b>)</i>, 506: 19-36, 2020. (JCR Q1, CCF B)<br>
                 [ <a href="https://www.sciencedirect.com/science/article/pii/S0020025519307303" target="_blank">paper</a> ]           			
                         </p></li>	
 			<li><p>
-                Guangwei Gao, Yi Yu, Meng Yang, Pu Huang, Qi Ge, Dong Yue.<br>
+                <b>Guangwei Gao</b>, Yi Yu, Meng Yang, Pu Huang, Qi Ge, Dong Yue.<br>
 		Multi-scale patch based representation feature learning for low-resolution face recognition.<br> 
 		<i>Applied Soft Computing (<b>ASOC</b>)</i>, 90: 106183, 2020. (JCR Q1) <br>
             	[ <a href="https://www.sciencedirect.com/science/article/abs/pii/S156849462030123X" target="_blank">paper</a> ]           			
                        </p></li>	
                         li><p>
-   		Guangwei Gao, Dong Zhu, Meng Yang, Huimin Lu, Wankou Yang, Hao Gao.<br>
+   		<b>Guangwei Gao</b>, Dong Zhu, Meng Yang, Huimin Lu, Wankou Yang, Hao Gao.<br>
 		Face Image Super Resolution with Pose via Nuclear Norm Regularized Structural Orthogonal Procrustes Regression.<br>
 		<i>Neural Computing and Applications (<b>NCAA</b>)</i>, 32(9): 4361-4371, 2020. (JCR Q1)<br>
 		[ <a href="https://link.springer.com/article/10.1007/s00521-018-3826-1" target="_blank">paper</a> ]
-                      
-			<li><p>
-		Guangwei Gao, Jian Yang, Zhihui Lai, Pu Huang, Jiejin Jiang, Hao Gao and Dong Yue, "Nuclear norm regularized coding with local position-patch and nonlocal similarity for face hallucination", Digital Signal Processing, Vol. 64,pp.107-120, 2017. (SCI, IF = 2.871, JCR Q1)<br>
-			
-			<li><p>
-                Guangwei Gao, Zangyi Hu, Pu Huang, Meng Yang, Quan Zhou, Songsong Wu and Dong Yue, "Robust Low-Resolution Face Recognition via Low-rank Representation and Locality-constrained Regression", Computers and Electrical Engineering, Vol.70, pp. 968-977, 2018. (SCI, IF = 2.663, JCR Q1)<br>
-
-            <
+                        </p></li>
+		        li><p>
+   		<b>Guangwei Gao</b>, Yannan Wang, Pu Huang, Heyou Chang, Huimin Lu, Dong Yue.<br>
+		Locality-constrained feature space learning for cross-resolution sketch-photo face recognition.<br>
+		<i>Multimedia Tools and Applications (<b>MTAP</b>)</i>, 79(21-22): 14903-14917, 2020. (JCR Q1)<br>
+		[ <a href="https://link.springer.com/article/10.1007/s11042-019-08488-y" target="_blank">paper</a> ]
+                        </p></li>
+	                li><p>
+   		Jiaming Chen, Meng Yang, <b>Guangwei Gao</b>.<br>
+		Semi-supervised Dual-Branch Network for image classification.<br>
+		<i>Knowledge-Based Systems (<b>KBS</b>)</i>, 197: 105837 (2020). (JCR Q1) <br>
+		[ <a href="https://www.sciencedirect.com/science/article/abs/pii/S0950705120302100" target="_blank">paper</a> ]
+                        </p></li>
+	                li><p>
+   		Yan Cui, Rui Zhang, Huacheng Gao, Yuanyuan Lu, Yinqiu Liu, <b>Guangwei Gao</b>.<br>
+		A novel biclustering of gene expression data based on hybrid BAFS-BSA algorithm.<br>
+		<i>Multimedia Tools and Applications (<b>MTAP</b>)</i>, 79(21-22): 14811-14824, 2020. (JCR Q1) <br>
+		[ <a href="https://link.springer.com/article/10.1007/s11042-019-7656-7" target="_blank">paper</a> ]
+                        </p></li>
+	                li><p>
+   		Songsong Wu, <b>Guangwei Gao</b>, Zuoyong Li, Fei Wu, Xiao-Yuan Jing.<br>
+		Unsupervised visual domain adaptation via discriminative dictionary evolution.<br>
+		<i>Pattern Analysis and Applications (<b>PAA</b>)</i>, 23(4): 1665-1675, 2020. (JCR Q2) <br>
+		[ <a href="https://link.springer.com/article/10.1007/s10044-020-00881-w" target="_blank">paper</a> ]
+                        </p></li>
+	                 li><p>
+   		Meng Yang, Wei Wen, Xing Wang, Linlin Shen, <b>Guangwei Gao</b>.<br>
+		Adaptive Convolution Local and Global Learning for Class-Level Joint Representation of Facial Recognition With a Single Sample Per Data Subject.<br>
+		<i>IEEE Transactions on Information Forensics and Security (<b>PATIFSA</b>)</i>, 15:2469-2484, 2020.  (JCR Q1, CCF A) <br>
+		[ <a href="https://ieeexplore.ieee.org/document/8957296" target="_blank">paper</a> ]
+                        </p></li>
 			
         </ol>
     </div>
+
+
+	 <div>
+        <h2><hr><a name="2019"></a>2019</h2>
+        <ol>
+	               <li><p>
+                Changan Yuan, Xiao Qin, Lechan Yang, Guangwei Gao, Song Deng.<br> 
+		 A Novel Function Mining Algorithm Based on Attribute Reduction and Improved Gene Expression Programming.<br>
+		<i><b>IEEE Access</b></i>, 7: 53365-53376, 2019. (JCR Q1) <br>
+		[ <a href="https://ieeexplore.ieee.org/document/8693716" target="_blank">paper</a> ]           			
+                       </p></li>
+		       <li><p>
+               <b>Guangwei Gao</b>, Dong Zhu, Huimin Lu, Yi Yu, Heyou Chang, Dong Yue.<br>
+	       Robust Facial Image Super-Resolution by Kernel Locality-Constrained Coupled-Layer Regression.<br>
+	       <i>ACM Transactions on Internet Technology (<b>TOIT</b>)</i>, accepted, 2020. (JCR Q1, CCF B) <br>
+	       [ paper] 		  
+                       </p></li>	
+			<li><p>
+		<b>Guangwei Gao</b>, Yi Yu, Jin Xie, Jian Yang, Meng Yang, Jian Zhang.<br> 
+		Constructing multilayer locality-constrained matrix regression framework for noise robust face super-resolution.<br>
+		<i>Pattern Recognition (<b>PR</b>)</i>, https://doi.org/10.1016/j.patcog.2020.107539, 2020. (JCR Q1, CCF B)<br>
+      		[ <a href="https://www.sciencedirect.com/science/article/abs/pii/S0031320320303423" target="_blank">paper</a> ]           			
+                        </p></li>	
+	  		<li><p>
+                <b>Guangwei Gao</b>, Yi Yu, Meng Yang, Heyou Chang, Pu Huang, Dong Yue.<br>
+		Cross-resolution face recognition with pose variations via multilayer locality-constrained structural orthogonal procrustes regression.<br>
+		<i>Information Sciences (<b>IS</b>)</i>, 506: 19-36, 2020. (JCR Q1, CCF B)<br>
+                [ <a href="https://www.sciencedirect.com/science/article/pii/S0020025519307303" target="_blank">paper</a> ]           			
+                        </p></li>	
+			<li><p>
+                <b>Guangwei Gao</b>, Yi Yu, Meng Yang, Pu Huang, Qi Ge, Dong Yue.<br>
+		Multi-scale patch based representation feature learning for low-resolution face recognition.<br> 
+		<i>Applied Soft Computing (<b>ASOC</b>)</i>, 90: 106183, 2020. (JCR Q1) <br>
+            	[ <a href="https://www.sciencedirect.com/science/article/abs/pii/S156849462030123X" target="_blank">paper</a> ]           			
+                       </p></li>	
+                        li><p>
+   		<b>Guangwei Gao</b>, Dong Zhu, Meng Yang, Huimin Lu, Wankou Yang, Hao Gao.<br>
+		Face Image Super Resolution with Pose via Nuclear Norm Regularized Structural Orthogonal Procrustes Regression.<br>
+		<i>Neural Computing and Applications (<b>NCAA</b>)</i>, 32(9): 4361-4371, 2020. (JCR Q1)<br>
+		[ <a href="https://link.springer.com/article/10.1007/s00521-018-3826-1" target="_blank">paper</a> ]
+                        </p></li>
+		        li><p>
+   		<b>Guangwei Gao</b>, Yannan Wang, Pu Huang, Heyou Chang, Huimin Lu, Dong Yue.<br>
+		Locality-constrained feature space learning for cross-resolution sketch-photo face recognition.<br>
+		<i>Multimedia Tools and Applications (<b>MTAP</b>)</i>, 79(21-22): 14903-14917, 2020. (JCR Q1)<br>
+		[ <a href="https://link.springer.com/article/10.1007/s11042-019-08488-y" target="_blank">paper</a> ]
+                        </p></li>
+	                li><p>
+   		Jiaming Chen, Meng Yang, <b>Guangwei Gao</b>.<br>
+		Semi-supervised Dual-Branch Network for image classification.<br>
+		<i>Knowledge-Based Systems (<b>KBS</b>)</i>, 197: 105837 (2020). (JCR Q1) <br>
+		[ <a href="https://www.sciencedirect.com/science/article/abs/pii/S0950705120302100" target="_blank">paper</a> ]
+                        </p></li>
+	                li><p>
+   		Yan Cui, Rui Zhang, Huacheng Gao, Yuanyuan Lu, Yinqiu Liu, <b>Guangwei Gao</b>.<br>
+		A novel biclustering of gene expression data based on hybrid BAFS-BSA algorithm.<br>
+		<i>Multimedia Tools and Applications (<b>MTAP</b>)</i>, 79(21-22): 14811-14824, 2020. (JCR Q1) <br>
+		[ <a href="https://link.springer.com/article/10.1007/s11042-019-7656-7" target="_blank">paper</a> ]
+                        </p></li>
+	                li><p>
+   		Songsong Wu, <b>Guangwei Gao</b>, Zuoyong Li, Fei Wu, Xiao-Yuan Jing.<br>
+		Unsupervised visual domain adaptation via discriminative dictionary evolution.<br>
+		<i>Pattern Analysis and Applications (<b>PAA</b>)</i>, 23(4): 1665-1675, 2020. (JCR Q2) <br>
+		[ <a href="https://link.springer.com/article/10.1007/s10044-020-00881-w" target="_blank">paper</a> ]
+                        </p></li>
+	                 li><p>
+   		Meng Yang, Wei Wen, Xing Wang, Linlin Shen, <b>Guangwei Gao</b>.<br>
+		Adaptive Convolution Local and Global Learning for Class-Level Joint Representation of Facial Recognition With a Single Sample Per Data Subject.<br>
+		<i>IEEE Transactions on Information Forensics and Security (<b>PATIFSA</b>)</i>, 15:2469-2484, 2020.  (JCR Q1, CCF A) <br>
+		[ <a href="https://ieeexplore.ieee.org/document/8957296" target="_blank">paper</a> ]
+                        </p></li>
+			
+        </ol>
+    </div>
+
+
+
 				
             <!-- 2019 -->
 
